Fixed z-index issue with sign out preset

--- a/css/home_page.css
+++ b/css/home_page.css
@@ -233,7 +233,7 @@ body {
   transition: background 1000ms;
 }
 
-.search_wrapper {
+.login_preset container .search_wrapper {
   height: 50px;
   width: 100%;
   display: block;
@@ -241,7 +241,7 @@ body {
   z-index: 2;
   transition: opacity 100ms linear;
 }
-.search_wrapper:first-of-type {
+.login_preset container:first-of-type .search_wrapper {
   z-index: 3;
 }
 .search_wrapper ul {
